cluster/infra/k8s-prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-prometheus
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: web
  selector:
    prometheus: k8s-prometheus
