cluster/infra/k8s-prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
spec:
  rules:
    - host: prometheus-127-0-0-1.traefik.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-prometheus
                port:
                  number: 80
  tls:
    - hosts:
        - prometheus-127-0-0-1.traefik.me
